tests/baselines/reference/continueTarget3.errors.txt
tests/cases/compiler/continueTarget3.ts(2,1): error TS7028: Unused label.


==== tests/cases/compiler/continueTarget3.ts (1 errors) ====
    target1:
    target2:
    ~~~~~~~
!!! error TS7028: Unused label.
    while (true) {
      continue target1;
    }